--- a/Samples/PresentationModel/Photography500px/Photography500px.dproj
+++ b/Samples/PresentationModel/Photography500px/Photography500px.dproj
@@ -7,7 +7,7 @@
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
         <FrameworkType>VCL</FrameworkType>
-        <ProjectVersion>15.3</ProjectVersion>
+        <ProjectVersion>16.0</ProjectVersion>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
@@ -41,6 +41,7 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
+        <SanitizedProjectName>Photography500px</SanitizedProjectName>
         <PostBuildEvent><![CDATA[xcopy "$(PROJECTDIR)\Resources\Images\*.*" "$(OUTPUTDIR)\Images" /i /d /y /e
 $(PostBuildEvent)]]></PostBuildEvent>
         <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
