--- a/Packages/DelphiXE3/DSharp.Core.dproj
+++ b/Packages/DelphiXE3/DSharp.Core.dproj
@@ -141,7 +141,7 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="rtl.dcp"/>
+        <DCCReference Include="Spring.Base.dcp"/>
         <DCCReference Include="..\..\Source\Collections\DSharp.Collections.Fibers.pas"/>
         <DCCReference Include="..\..\Source\Collections\DSharp.Collections.Iterators.pas"/>
         <DCCReference Include="..\..\Source\Collections\DSharp.Collections.Threading.pas"/>
@@ -157,8 +157,6 @@
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Detour.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Dynamics.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Editable.pas"/>
-        <DCCReference Include="..\..\Source\Core\DSharp.Core.EventArgs.pas"/>
-        <DCCReference Include="..\..\Source\Core\DSharp.Core.Events.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Expressions.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Extensions.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Fibers.pas"/>
