--- a/Packages/DelphiXE4/DSharp.Core.dproj
+++ b/Packages/DelphiXE4/DSharp.Core.dproj
@@ -152,10 +152,10 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="rtl.dcp"/>
+        <DCCReference Include="Spring.Base.dcp"/>
         <DCCReference Include="..\..\Source\Collections\DSharp.Collections.Fibers.pas"/>
+        <DCCReference Include="..\..\Source\Collections\DSharp.Collections.Iterators.pas"/>
         <DCCReference Include="..\..\Source\Collections\DSharp.Collections.Threading.pas"/>
-        <DCCReference Include="..\..\Source\Collections\DSharp.Collections.Yield.pas"/>
         <DCCReference Include="..\..\Source\ComponentModel\DSharp.ComponentModel.DataAnnotations.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Cache.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Collections.pas"/>
@@ -168,8 +168,6 @@
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Detour.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Dynamics.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Editable.pas"/>
-        <DCCReference Include="..\..\Source\Core\DSharp.Core.EventArgs.pas"/>
-        <DCCReference Include="..\..\Source\Core\DSharp.Core.Events.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Expressions.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Extensions.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Fibers.pas"/>
